// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function with Storage Should synth and match SnapShot 1`] = `
"{
  "data": {
    "archive_file": {
      "HelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBE": {
        "output_path": "\${path.root}/.archive_files/HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7.zip",
        "provider": "archive",
        "source_content": "foo",
        "source_content_filename": "index.js",
        "type": "zip"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_lambda.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "HelloWorld_ServiceRole_DefaultPolicy_80066894": {
        "statement": [
          {
            "actions": [
              "xray:PutTraceSegments",
              "xray:PutTelemetryRecords"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "s3:GetObject*",
              "s3:GetBucket*",
              "s3:List*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_s3_bucket.HelloWorldBucket_D435D97F.arn}",
              "\${aws_s3_bucket.HelloWorldBucket_D435D97F.arn}/*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_lambda": {
        "service_name": "lambda"
      }
    }
  },
  "provider": {
    "archive": [
      {
      }
    ],
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "HelloWorld_LogGroup_948040CF": {
        "name": "/aws/lambda/Grid-HelloWorld",
        "retention_in_days": 7,
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_iam_role": {
      "HelloWorld_ServiceRole_F3F7D8B0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B.json}",
        "managed_policy_arns": [
          "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "name_prefix": "Grid-HelloWorldServiceRole",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_iam_role_policy": {
      "HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883": {
        "name": "HelloWorldServiceRoleDefaultPolicyD106D926",
        "policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894.json}",
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.name}"
      }
    },
    "aws_lambda_function": {
      "HelloWorld_7964D1E8": {
        "architectures": [
          "x86_64"
        ],
        "depends_on": [
          "aws_cloudwatch_log_group.HelloWorld_LogGroup_948040CF",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B",
          "aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894",
          "aws_iam_role_policy.HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883"
        ],
        "environment": {
          "variables": {
          }
        },
        "filename": "\${data.archive_file.HelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBE.output_path}",
        "function_name": "Grid-HelloWorld",
        "handler": "index.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.arn}",
        "runtime": "nodejs22.x",
        "source_code_hash": "\${data.archive_file.HelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBE.output_base64sha256}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    },
    "aws_s3_bucket": {
      "HelloWorldBucket_D435D97F": {
        "bucket_prefix": "hello-world-helloworldbucket",
        "tags": {
          "Name": "Default-HelloWorldBucket",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "archive": {
        "source": "hashicorp/archive",
        "version": "2.7.1"
      },
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`Function with event rules Should handle dependencies on permissions 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_lambda.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "HelloWorld_ServiceRole_DefaultPolicy_80066894": {
        "statement": [
          {
            "actions": [
              "xray:PutTraceSegments",
              "xray:PutTelemetryRecords"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_lambda": {
        "service_name": "lambda"
      }
    },
    "terraform_remote_state": {
      "cross-stack-reference-input-Default": {
        "backend": "local",
        "config": {
          "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
        },
        "workspace": "\${terraform.workspace}"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "HelloWorldRule_4DC52DAE": {
        "name_prefix": "Grid-HelloWorldRule",
        "schedule_expression": "rate(1 day)",
        "state": "ENABLED",
        "tags": {
          "Name": "Default-HelloWorldRule",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_cloudwatch_event_target": {
      "HelloWorldRule_Target0_06A32FED": {
        "arn": "\${aws_lambda_function.HelloWorld_7964D1E8.arn}",
        "rule": "\${aws_cloudwatch_event_rule.HelloWorldRule_4DC52DAE.name}",
        "target_id": "Target0"
      }
    },
    "aws_cloudwatch_log_group": {
      "HelloWorld_LogGroup_948040CF": {
        "name": "/aws/lambda/Grid-HelloWorld",
        "retention_in_days": 7,
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_iam_role": {
      "HelloWorld_ServiceRole_F3F7D8B0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B.json}",
        "managed_policy_arns": [
          "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "name_prefix": "Grid-HelloWorldServiceRole",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_iam_role_policy": {
      "HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883": {
        "name": "HelloWorldServiceRoleDefaultPolicyD106D926",
        "policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894.json}",
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.name}"
      }
    },
    "aws_lambda_function": {
      "HelloWorld_7964D1E8": {
        "architectures": [
          "x86_64"
        ],
        "depends_on": [
          "aws_cloudwatch_log_group.HelloWorld_LogGroup_948040CF",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B",
          "aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894",
          "aws_iam_role_policy.HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883"
        ],
        "environment": {
          "variables": {
          }
        },
        "filename": "\${data.terraform_remote_state.cross-stack-reference-input-Default.outputs.cross-stack-output-dataarchive_fileHelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBEoutput_path}",
        "function_name": "Grid-HelloWorld",
        "handler": "index.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.arn}",
        "runtime": "nodejs22.x",
        "source_code_hash": "\${data.terraform_remote_state.cross-stack-reference-input-Default.outputs.cross-stack-output-dataarchive_fileHelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBEoutput_base64sha256}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    },
    "aws_lambda_permission": {
      "HelloWorldRule_AllowEventRuleHelloWorld_7718BF37": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.HelloWorld_7964D1E8.arn}",
        "principal": "events.amazonaws.com",
        "source_arn": "\${aws_cloudwatch_event_rule.HelloWorldRule_4DC52DAE.arn}"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;
